Comments and syntaxe

--- a/Neural_Networks/Jax/Poisson/NN_Jax_Poisson.ipynb
+++ b/Neural_Networks/Jax/Poisson/NN_Jax_Poisson.ipynb
@@ -41,7 +41,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpu\n"
+     ]
+    }
+   ],
    "source": [
     "# Jax libraries\n",
     "from jax import value_and_grad,vmap,jit,jacfwd\n",
@@ -117,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PDE operators"
+    "# Two dimensional PDE operators"
    ]
   },
   {
@@ -126,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PDE_operators:\n",
+    "class PDE_operators2d:\n",
     "    \"\"\"\n",
     "        Class with the most common operators used to solve PDEs\n",
     "    Input:\n",
@@ -149,7 +157,7 @@
     "        laplacian = vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "        return laplacian\n",
     "\n",
-    "    # Compute the derivative in x\n",
+    "    # Compute the partial derivative in x\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dx(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -160,7 +168,7 @@
     "        vec_fun = vmap(action, in_axes = (None, 0, 0))\n",
     "        return vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "\n",
-    "    # Compute the derivative in y\n",
+    "    # Compute the partial derivative in y\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dy(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -194,7 +202,7 @@
     "\n",
     "    # Class initialization\n",
     "    def __init__(self,NN_evaluation):\n",
-    "        self.operators=PDE_operators(self.solution)\n",
+    "        self.operators=PDE_operators2d(self.solution)\n",
     "        self.laplacian=self.operators.laplacian_2d\n",
     "        self.NN_evaluation=NN_evaluation\n",
     "        self.dsol_dy=self.operators.du_dy\n",
@@ -227,15 +235,16 @@
     "\n",
     "    # Compute the loss function\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def loss_function(self,params,inputs,targets):\n",
+    "    def loss_function(self,params,inputs):\n",
+    "        targets = solver.target_function(inputs)\n",
     "        preds=self.laplacian(params,inputs).reshape(-1,1)\n",
     "        return jnp.linalg.norm(preds+targets)    \n",
     "\n",
     "    # Train step\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def train_step(self,i, opt_state, inputs, pred_outputs):\n",
+    "    def train_step(self,i, opt_state, inputs):\n",
     "        params = get_params(opt_state)\n",
-    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs, pred_outputs)\n",
+    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs)\n",
     "        return loss, opt_update(i, gradient, opt_state)"
    ]
   },
@@ -386,8 +395,7 @@
     "    ran_key, batch_key = jran.split(key)\n",
     "    XY_train = jran.uniform(batch_key, shape=(batch_size, n_features), minval=0, maxval=1)\n",
     "\n",
-    "    targets = solver.target_function(XY_train)\n",
-    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train,targets)\n",
+    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train)\n",
     "    loss_history.append(float(loss))\n",
     "\n",
     "    if ibatch%report_steps==report_steps-1:\n",
@@ -519,6 +527,7 @@
     "\n",
     "true_sol = true_solution(XY_test)\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=true_sol, cmap=\"hot\",s=2)\n",
+    "plt.clim(vmin=jnp.min(true_sol),vmax=jnp.max(true_sol))\n",
     "plt.colorbar()\n",
     "plt.title(\"True solution\")\n",
     "plt.show()"
@@ -562,6 +571,7 @@
     "error=abs(true_sol-predictions)\n",
     "\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=error, cmap=\"viridis\",s=2)\n",
+    "plt.clim(vmin=0,vmax=jnp.max(error))\n",
     "plt.colorbar()\n",
     "plt.title(\"Absolut error\")\n",
     "plt.show()"
