--- a/Neural_Networks/Jax/Problem_5/NN_Jax_PDE5.ipynb
+++ b/Neural_Networks/Jax/Problem_5/NN_Jax_PDE5.ipynb
@@ -40,9 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpu\n"
+     ]
+    }
+   ],
    "source": [
     "# Jax libraries\n",
     "from jax import value_and_grad,vmap,jit,jacfwd\n",
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +126,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PDE operators"
+    "# Two dimensional PDE operators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PDE_operators:\n",
+    "class PDE_operators2d:\n",
     "    \"\"\"\n",
     "        Class with the most common operators used to solve PDEs\n",
     "    Input:\n",
@@ -150,7 +158,7 @@
     "        laplacian = vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "        return laplacian\n",
     "\n",
-    "    # Compute the derivative in x\n",
+    "    # Compute the partial derivative in x\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dx(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -161,7 +169,7 @@
     "        vec_fun = vmap(action, in_axes = (None, 0, 0))\n",
     "        return vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "\n",
-    "    # Compute the derivative in y\n",
+    "    # Compute the partial derivative in y\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dy(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -182,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +203,7 @@
     "\n",
     "    # Class initialization\n",
     "    def __init__(self,NN_evaluation):\n",
-    "        self.operators=PDE_operators(self.solution)\n",
+    "        self.operators=PDE_operators2d(self.solution)\n",
     "        self.laplacian=self.operators.laplacian_2d\n",
     "        self.NN_evaluation=NN_evaluation\n",
     "\n",
@@ -232,16 +240,16 @@
     "\n",
     "    # Compute the loss function\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def loss_function(self,params,batch,targets):\n",
+    "    def loss_function(self,params,batch):\n",
     "        targets=self.target_function(batch)\n",
     "        preds=self.laplacian(params,batch).reshape(-1,1)\n",
     "        return jnp.linalg.norm(preds-targets)\n",
     " \n",
     "    # Train step\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def train_step(self,i, opt_state, inputs, pred_outputs):\n",
+    "    def train_step(self,i, opt_state, inputs):\n",
     "        params = get_params(opt_state)\n",
-    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs, pred_outputs)\n",
+    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs)\n",
     "        return loss, opt_update(i, gradient, opt_state)"
    ]
   },
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -392,8 +400,7 @@
     "    ran_key, batch_key = jran.split(key)\n",
     "    XY_train = jran.uniform(batch_key, shape=(batch_size, n_features), minval=0, maxval=1)\n",
     "\n",
-    "    targets = solver.target_function(XY_train)\n",
-    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train,targets)\n",
+    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train)\n",
     "    loss_history.append(float(loss))\n",
     "\n",
     "    if ibatch%report_steps==report_steps-1:\n",
@@ -412,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +428,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -457,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -525,6 +532,7 @@
     "\n",
     "true_sol = true_solution(XY_test)\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=true_sol, cmap=\"hot\",s=2)\n",
+    "plt.clim(vmin=jnp.min(true_sol),vmax=jnp.max(true_sol))\n",
     "plt.colorbar()\n",
     "plt.title(\"True solution\")\n",
     "plt.show()"
@@ -540,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -567,6 +575,7 @@
     "error=abs(predictions-true_sol)\n",
     "\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=error, cmap=\"viridis\",s=2)\n",
+    "plt.clim(vmin=0,vmax=jnp.max(error))\n",
     "plt.colorbar()\n",
     "plt.title(\"Absolut error\")\n",
     "plt.show()"
@@ -581,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
