--- a/Neural_Networks/Jax/Problem_6/NN_Jax_PDE6.ipynb
+++ b/Neural_Networks/Jax/Problem_6/NN_Jax_PDE6.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +130,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PDE operators"
+    "# Two dimensional PDE operators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PDE_operators:\n",
+    "class PDE_operators2d:\n",
     "    \"\"\"\n",
     "        Class with the most common operators used to solve PDEs\n",
     "    Input:\n",
@@ -162,7 +162,7 @@
     "        laplacian = vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "        return laplacian\n",
     "\n",
-    "    # Compute the derivative in x\n",
+    "    # Compute the partial derivative in x\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dx(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -173,7 +173,7 @@
     "        vec_fun = vmap(action, in_axes = (None, 0, 0))\n",
     "        return vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "\n",
-    "    # Compute the derivative in y\n",
+    "    # Compute the partial derivative in y\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dy(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
     "\n",
     "    # Class initialization\n",
     "    def __init__(self,NN_evaluation):\n",
-    "        self.operators=PDE_operators(self.solution)\n",
+    "        self.operators=PDE_operators2d(self.solution)\n",
     "        self.laplacian=self.operators.laplacian_2d\n",
     "        self.NN_evaluation=NN_evaluation\n",
     "\n",
@@ -246,16 +246,16 @@
     "\n",
     "    # Compute the loss function\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def loss_function(self,params,batch,targets):\n",
+    "    def loss_function(self,params,batch):\n",
     "        targets=self.target_function(batch)\n",
     "        preds=self.laplacian(params,batch).reshape(-1,1)\n",
     "        return jnp.linalg.norm(preds-targets)\n",
     " \n",
     "    # Train step\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def train_step(self,i, opt_state, inputs, pred_outputs):\n",
+    "    def train_step(self,i, opt_state, inputs):\n",
     "        params = get_params(opt_state)\n",
-    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs, pred_outputs)\n",
+    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs)\n",
     "        return loss, opt_update(i, gradient, opt_state)"
    ]
   },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -406,8 +406,7 @@
     "    ran_key, batch_key = jran.split(key)\n",
     "    XY_train = jran.uniform(batch_key, shape=(batch_size, n_features), minval=0, maxval=1)\n",
     "\n",
-    "    targets = solver.target_function(XY_train)\n",
-    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train,targets)\n",
+    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train)\n",
     "    loss_history.append(float(loss))\n",
     "\n",
     "    if ibatch%report_steps==report_steps-1:\n",
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +434,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -539,6 +538,7 @@
     "\n",
     "true_sol = true_solution(XY_test)\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=true_sol, cmap=\"hot\",s=2)\n",
+    "plt.clim(vmin=jnp.min(true_sol),vmax=jnp.max(true_sol))\n",
     "plt.colorbar()\n",
     "plt.title(\"True solution\")\n",
     "plt.show()"
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -582,6 +582,7 @@
     "error=abs(predictions-true_sol)\n",
     "\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=error, cmap=\"viridis\",s=2)\n",
+    "plt.clim(vmin=0,vmax=jnp.max(error))\n",
     "plt.colorbar()\n",
     "plt.title(\"Absolut error\")\n",
     "plt.show()"
@@ -596,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
