--- a/Neural_Networks/Jax/Problem_7/NN_Jax_PDE7.ipynb
+++ b/Neural_Networks/Jax/Problem_7/NN_Jax_PDE7.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,16 +126,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PDE operators"
+    "# Two dimensional PDE operators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PDE_operators:\n",
+    "class PDE_operators2d:\n",
     "    \"\"\"\n",
     "        Class with the most common operators used to solve PDEs\n",
     "    Input:\n",
@@ -158,7 +158,7 @@
     "        laplacian = vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "        return laplacian\n",
     "\n",
-    "    # Compute the derivative in x\n",
+    "    # Compute the partial derivative in x\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dx(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -169,7 +169,7 @@
     "        vec_fun = vmap(action, in_axes = (None, 0, 0))\n",
     "        return vec_fun(params, inputs[:,0], inputs[:,1])\n",
     "\n",
-    "    # Compute the derivative in y\n",
+    "    # Compute the partial derivative in y\n",
     "    @partial(jit, static_argnums=(0,))    \n",
     "    def du_dy(self,params,inputs):\n",
     "        fun = lambda params,x,y: self.function(params, x,y)\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
     "\n",
     "    # Class initialization\n",
     "    def __init__(self,NN_evaluation):\n",
-    "        self.operators=PDE_operators(self.solution)\n",
+    "        self.operators=PDE_operators2d(self.solution)\n",
     "        self.laplacian=self.operators.laplacian_2d\n",
     "        self.NN_evaluation=NN_evaluation\n",
     "\n",
@@ -235,16 +235,16 @@
     "\n",
     "    # Compute the loss function\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def loss_function(self,params,batch,targets):\n",
+    "    def loss_function(self,params,batch):\n",
     "        targets=self.target_function(batch)\n",
     "        preds=self.laplacian(params,batch).reshape(-1,1)\n",
     "        return jnp.linalg.norm(preds-targets)\n",
     " \n",
     "    # Train step\n",
     "    @partial(jit, static_argnums=(0,))    \n",
-    "    def train_step(self,i, opt_state, inputs, pred_outputs):\n",
+    "    def train_step(self,i, opt_state, inputs):\n",
     "        params = get_params(opt_state)\n",
-    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs, pred_outputs)\n",
+    "        loss, gradient = value_and_grad(self.loss_function)(params,inputs)\n",
     "        return loss, opt_update(i, gradient, opt_state)"
    ]
   },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,8 +395,7 @@
     "    ran_key, batch_key = jran.split(key)\n",
     "    XY_train = jran.uniform(batch_key, shape=(batch_size, n_features), minval=0, maxval=1)\n",
     "\n",
-    "    targets = solver.target_function(XY_train)\n",
-    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train,targets)\n",
+    "    loss, opt_state = solver.train_step(ibatch,opt_state, XY_train)\n",
     "    loss_history.append(float(loss))\n",
     "\n",
     "    if ibatch%report_steps==report_steps-1:\n",
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +423,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -460,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -528,6 +527,7 @@
     "\n",
     "true_sol = true_solution(XY_test)\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=true_sol, cmap=\"hot\",s=2)\n",
+    "plt.clim(vmin=jnp.min(true_sol),vmax=jnp.max(true_sol))\n",
     "plt.colorbar()\n",
     "plt.title(\"True solution\")\n",
     "plt.show()"
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -571,6 +571,7 @@
     "error=abs(predictions-true_sol)\n",
     "\n",
     "plt.scatter(XY_test[:,0],XY_test[:,1], c=error, cmap=\"viridis\",s=2)\n",
+    "plt.clim(vmin=0,vmax=jnp.max(error))\n",
     "plt.colorbar()\n",
     "plt.title(\"Absolut error\")\n",
     "plt.show()"
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
