--- a/Mesh/Mesh_generator.ipynb
+++ b/Mesh/Mesh_generator.ipynb
@@ -347,8 +347,9 @@
    ],
    "source": [
     "import vtk\n",
-    "colors = vtk.vtkIntArray()\n",
-    "colors.SetName(\"Depth (m)\")\n",
+    "from vtk.util import numpy_support\n",
+    "#colors = vtk.vtkIntArray()\n",
+    "#colors.SetName(\"Depth (m)\")\n",
     "depth_scale=[]\n",
     "for i in range(grid.number_of_cells):\n",
     "    cell=grid.cell_points(i)\n",
@@ -357,9 +358,13 @@
     "        sum+=cell[j][2]/30\n",
     "    sum=int(sum/len(cell))\n",
     "    depth_scale.append(sum)\n",
-    "for t in depth_scale:\n",
-    "    colors.InsertNextValue(t)\n",
-    "grid.GetCellData().SetScalars(colors)\n"
+    "\n",
+    "colors = numpy_support.numpy_to_vtk(depth_scale, deep=True, array_type=vtk.VTK_INT)\n",
+    "colors.SetName(\"Depth (m)\")\n",
+    "grid.GetCellData().SetScalars(colors)\n",
+    "#for t in depth_scale:\n",
+    "    #colors.InsertNextValue(t)\n",
+    "#grid.GetCellData().SetScalars(colors)"
    ]
   },
   {
@@ -379,14 +384,18 @@
     }
    ],
    "source": [
-    "colors = vtk.vtkIntArray()\n",
-    "colors.SetName(\"Depth (m)\")\n",
+    "#colors = vtk.vtkIntArray()\n",
+    "#colors.SetName(\"Depth (m)\")\n",
     "depth_scale=[]\n",
     "for i in range(grid.number_of_points):\n",
     "    depth_scale.append(int(points[i][2]/30))\n",
-    "for t in depth_scale:\n",
-    "    colors.InsertNextValue(t)\n",
-    "grid.GetPointData().SetScalars(colors)"
+    "\n",
+    "colors = numpy_support.numpy_to_vtk(depth_scale, deep=True, array_type=vtk.VTK_INT)\n",
+    "colors.SetName(\"Depth (m)\")\n",
+    "grid.GetPointData().SetScalars(colors)\n",
+    "#for t in depth_scale:\n",
+    "#    colors.InsertNextValue(t)\n",
+    "#grid.GetPointData().SetScalars(colors)"
    ]
   },
   {
