--- a/Tsunami_report/Bibliographie.tex
+++ b/Tsunami_report/Bibliographie.tex
@@ -1,5 +1,5 @@
-\chapter*{Références bibliographiques}
-\addcontentsline{toc}{part}{Références bibliographiques}
-\rhead{\nouppercase{Références bibliographiques}}
+\chapter*{Bibliography}
+\addcontentsline{toc}{part}{Bibliography}
+\rhead{\nouppercase{Bibliography}}
 
 
