--- a/Tsunami_report/Chapitre3.tex
+++ b/Tsunami_report/Chapitre3.tex
@@ -190,7 +190,7 @@ According to the results obtained, the elu activation function takes longer to c
 \subsection{Analysis}
 
 
-\section{PyTorch}
+\section{PyTorch approach}
 \subsection{PyTorch library}
 
 
