--- a/Tsunami_report/Conclusion.tex
+++ b/Tsunami_report/Conclusion.tex
@@ -4,4 +4,4 @@
 
 \section{Conclusion}
 
-\section{Perspectives for new works and how to improve the project}
+\section{Perspectives for new works and future improvements}
