Inclusion de la simulation pour relu et gelu

--- a/Neural_Networks/Jax/Problem_8/NN_Jax_PDE8.ipynb
+++ b/Neural_Networks/Jax/Problem_8/NN_Jax_PDE8.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
     "from functools import partial \n",
     "from jax import random as jran\n",
     "from jax.example_libraries import optimizers as jax_opt\n",
-    "from jax.nn import tanh, sigmoid, elu\n",
+    "from jax.nn import tanh, sigmoid, elu, relu, gelu\n",
     "from jax.lib import xla_bridge\n",
     "import jax.numpy as jnp\n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
