Petite correction dans une analyse

--- a/Tsunami_report/Chapitre3.tex
+++ b/Tsunami_report/Chapitre3.tex
@@ -241,7 +241,7 @@ On the image below we can see the results obtained for the PDE of the section \r
 
 \vspace{-0.5cm}
 \subsection{Analysis}
-According to the results obtained, the elu and relu activation functions takes longer to converge using the same parameters. Also, it is observed that the hyperbolic tangent, gelu and sygmoid provided a smaller absolute error for the same number of iterations.
+According to the results obtained, elu and relu activation functions takes longer to converge using the same parameters. Also, it is observed that hyperbolic tangent, gelu and sigmoid provided a smaller absolute error for the same number of iterations.
 \newpage
 
 \section{TensorFlow approach}
