--- a/data/arcachon_plus_bathymetry/display_dataset.ipynb
+++ b/data/arcachon_plus_bathymetry/display_dataset.ipynb
@@ -121,11 +121,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e5030792b3492f6b12d94f1f48beca3d8e59ec05fd59d0aaaa48e684281ed297"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.13 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -139,9 +136,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "dfbe69d09349a49120ff36b7a9d7a3d6297f4f930536f8fd166c745a423a6004"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
