mesh smoothing, creation of the boundary and normalization

--- a/processed_data/Mesh/Bat_and_Topo_arcachon/Data_set_generator_earth.ipynb
+++ b/processed_data/Mesh/Bat_and_Topo_arcachon/Data_set_generator_earth.ipynb
@@ -70,10 +70,10 @@
     "import matplotlib.tri as tri\n",
     "\n",
     "# Number of earth points = num_lin*num_col\n",
-    "var_col=1.33169-0.92421 \n",
-    "var_line=44.96383-44.39767\n",
+    "var_col=1.329730-0.927928\n",
+    "var_line=44.959459-44.400360\n",
     "\n",
-    "def obtain_lat_and_long(limites_lat=[44.39767,44.96383],limites_long=[-0.92421,-1.33169],num_lin=int(150/var_line),num_col=int(150/var_col)):\n",
+    "def obtain_lat_and_long(limites_lat=[44.400360,44.959459],limites_long=[-0.927928,-1.329730],num_lin=int(150/var_line),num_col=int(150/var_col)):\n",
     "    all_coords=[]\n",
     "    for i in range(num_lin):\n",
     "        lat=float('%.5f'%(limites_lat[1]-(i)*(limites_lat[1]-limites_lat[0])/num_lin))\n",
@@ -1216,7 +1216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.13 (default, Apr 24 2022, 01:06:43) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4
  },
