--- a/src/Approaches/Lagaris_Paper2/Problem8/pde8.ipynb
+++ b/src/Approaches/Lagaris_Paper2/Problem8/pde8.ipynb
@@ -845,7 +845,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.13"
+      "version": "3.7.13 (default, Apr 24 2022, 01:06:43) \n[GCC 11.2.0]"
     },
     "vscode": {
       "interpreter": {
